--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8" />
     <meta property="og:title" content="VTalk" />
     <meta property="og:description" content="랜덤 VRChat 유저와의 대화" />
-    <meta property="og:image" content="../Imgs/titleOfRc.svg" />
-    <link rel="icon" href="../Imgs/favicon.ico" />
-    <link rel="apple-touch-icon" href="./public/favicon.ico" />
+    <meta property="og:image" content="/titleOfRc.svg" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
-      as="style"
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css"
     />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="랜덤 유저와 채팅" />
     <title>VTalk</title>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
