--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
     <meta property="og:title" content="VTalk" />
     <meta property="og:description" content="랜덤 VRChat 유저와의 대화" />
-    <meta property="og:image" content="/titleOfRc.svg" />
+    <meta property="og:image" content="/titleOfRC.svg" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
