--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta property="og:title" content="VTalk" />
     <meta property="og:description" content="랜덤 VRChat 유저와의 대화" />
     <meta property="og:image" content="/titleOfRC.svg" />
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/favicon.ico" />
+    <link rel="icon" href="/imgs/favicon.ico" />
+    <link rel="apple-touch-icon" href="/imgs/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
