주아체 cdn 추가

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta property="og:image" content="/titleOfRC.svg" />
     <link rel="icon" href="/imgs/favicon.ico" />
     <link rel="apple-touch-icon" href="/imgs/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
       rel="stylesheet"
-      crossorigin
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="랜덤 유저와 채팅" />
     <title>VTalk</title>
   </head>
