구글 에드 추가 (meta태그)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta property="og:title" content="VTalk" />
     <meta property="og:description" content="랜덤 VRChat 유저와의 대화" />
     <meta property="og:image" content="/titleOfRC.svg" />
+    <meta name="google-adsense-account" content="ca-pub-9319851907156363" />
     <link rel="icon" href="/imgs/favicon.ico" />
     <link rel="apple-touch-icon" href="/imgs/favicon.ico" />
     <link
