구글 에드 스크립트 태그 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta property="og:description" content="랜덤 VRChat 유저와의 대화" />
     <meta property="og:image" content="/titleOfRC.svg" />
     <meta name="google-adsense-account" content="ca-pub-9319851907156363" />
+
     <link rel="icon" href="/imgs/favicon.ico" />
     <link rel="apple-touch-icon" href="/imgs/favicon.ico" />
     <link
@@ -16,6 +17,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="랜덤 유저와 채팅" />
     <title>VTalk</title>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9319851907156363"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
